# TimelineForPC

./: .gitignore  AGENTS.md  README.md  cli.ps1  pyproject.toml  settings.example.json  timeline-for-pc.ps1  timeline-product.json
src/timeline_for_pc/: __init__.py  __main__.py  bundle.py  cli.py  collector.py  doctor.py  items.py  mock_data.py  models.py  redaction.py  render.py  runner.py  settings.py  smoke.py  timeline_store.py
src/timeline_for_pc/powershell/: collect_snapshot.ps1
tests/: test_capture.py
