[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "timeline-for-pc"
version = "0.1.1"
description = "Local-first CLI that captures the current state of a Windows PC into a readable markdown report."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
timeline-for-pc = "timeline_for_pc.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
